# soundio-rs

./: .gitignore  .travis.yml  Cargo.toml  Readme.md  appveyor.yml  build.rs
.cargo/: config
examples/list_devices/: main.rs
examples/player/: main.rs
examples/recorder/: main.rs
examples/sine/: main.rs
libsoundio-1.1.0/i686/: symbols.txt
libsoundio-sys/: Cargo.toml  build.rs  lib.rs
src/: backend.rs  channels.rs  context.rs  device.rs  error.rs  format.rs  instream.rs  layout.rs  lib.rs  main.rs  outstream.rs  sample.rs  types.rs  util.rs
src/bindings/: mod.rs
src/soundio/: channel_areas.rs  context.rs  device.rs  error.rs  instream.rs  layout.rs  mod.rs  outstream.rs  types.rs  util.rs
