[package]
name = "soundio"
version = "0.1.0"
authors = ["Tim Hutt <tdhutt@gmail.com>"]
links = "libsoundio"
build = "build.rs"

[dependencies]
libc = "0.2.17"
rand = "0.3"

# This is just for the examples; for scoped threads.
crossbeam = "0.2.10"
# Just for examples; for wav playback and recording.
hound = "3.0.0"