[package]
name = "soundio"
version = "0.1.0"
authors = ["Tim Hutt <tdhutt@gmail.com>"]
links = "libsoundio"
build = "build.rs"

[dependencies]
libc = "0.2.17"


#[dev-dependencies]

# For white noise
rand = "0.3"

# For scoped threads
crossbeam = "0.2.10"

# For wav playback & recording
hound = "3.0.0"