[package]
name = "libsoundio-sys"
version = "0.1.0"
authors = ["Tim Hutt <tdhutt@gmail.com>"]
links = "soundio"
build = "build.rs"
repository = "https://github.com/Timmmm/soundio-rs"
license = "MIT"
description = "Native bindings to the libsoundio library"

[lib]
name = "libsoundio_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
cmake = "0.1.2"
gcc = "0.3"